--- a/js/lang/en.json
+++ b/js/lang/en.json
@@ -1,9 +1,9 @@
 {
   "nav.home": "Home",
   "nav.about": "About Us",
-  "nav.x7_ai": "X7-AI Robot",
+  "nav.x7_ai": "Panshaker X7",
   "nav.contact": "Contact",
-  "nav.synapse": "Synapse OS",
+  "nav.synapse": "PanOS",
   "nav.careers": "Careers",
   "nav.investors": "Investor Relations",
 
@@ -15,9 +15,9 @@
   "philosophy.title": "Beyond Food — It's Hard Tech",
   "philosophy.desc": "We transform the uncontrollable manual cooking process into a highly reliable industrial automation process for the AI era.<br>Writing new possibilities for Chinese cuisine in North America.",
 
-  "solution.price_title": "X7-AI Cooking Robot",
+  "solution.price_title": "Panshaker X7",
   "solution.price_desc": "Half the price of competitors<br>< 2 weeks low-cost retrofit<br>enabling unmanned cooking",
-  "solution.synapse_title": "Synapse OS",
+  "solution.synapse_title": "PanOS",
   "solution.synapse_desc": "Next-gen restaurant operating system<br>One-stop standardized solution for Chinese cuisine overseas",
   "solution.learn_more": "Learn More →",
 
@@ -35,7 +35,7 @@
   "footer.careers": "Careers",
   "footer.investors": "Investor Relations",
   "footer.tech": "Technical Support",
-  "footer.synapse": "Synapse OS",
+  "footer.synapse": "PanOS",
   "footer.hardware": "Hardware Solutions",
   "footer.support": "After-Sales Service",
   "footer.contact": "Contact",
@@ -50,9 +50,9 @@
   "home.hero.cta": "Learn More",
   "home.philosophy.title": "Beyond Food — It's Hard Tech",
   "home.philosophy.desc": "We transform the uncontrollable manual cooking process into a highly reliable industrial automation process for the AI era.<br>Writing new possibilities for Chinese cuisine in North America.",
-  "home.solution.price_title": "X7-AI Cooking Robot",
+  "home.solution.price_title": "Panshaker X7",
   "home.solution.price_desc": "Half the price of competitors<br>< 2 weeks low-cost retrofit<br>enabling unmanned cooking",
-  "home.solution.synapse_title": "Synapse OS",
+  "home.solution.synapse_title": "PanOS",
   "home.solution.synapse_desc": "Next-gen restaurant operating system<br>One-stop standardized solution for Chinese cuisine overseas",
   "home.solution.learn_more": "Learn More →",
   "home.ambassador.line": "Gao Leilei | Global Ambassador | Former Beijing Guoan FC player, restaurant owner",
@@ -64,8 +64,9 @@
   "about.intro.title": "About Panshaker",
   "about.intro.p1": "Panshaker Services is a leader in North American restaurant automation. Our mission is to bring authentic Eastern flavors across borders so every city can enjoy great food. By integrating industrial-grade automation hardware with our own AI, we deliver reliable, efficient kitchens.",
   "about.intro.p2": "We pioneered unmanned cooking for Chinese cuisine in North America, turning uncontrollable cooking steps into standardized processes to solve high labor costs, low efficiency, inconsistent quality, and operational complexity.",
-  "about.intro.p3": "We run our own brands and, through an in-store partnership and equipment subscription model, empower existing restaurants. Our edge comes from self-built wok robots, AI vision monitoring, and Synapse OS.",
+  "about.intro.p3": "We run our own brands and, through an in-store partnership and equipment subscription model, empower existing restaurants. Our edge comes from self-built wok robots, AI vision monitoring, and PanOS.",
   "about.intro.p4": "We will keep advancing restaurant automation, expanding from wok robots to full-stack Chinese cuisine infrastructure to lower the barrier for entrepreneurs. We use leading tech to connect the physical and digital worlds, creating value for operators and better experiences for diners.",
+  "about.brand.desc": "Panshaker Services is the overseas brand of xinchushi",
   "about.team.title": "Leadership",
   "about.team.xu.name": "Haoran Xu",
   "about.team.xu.role": "Founder",
