--- a/js/lang/ja.json
+++ b/js/lang/ja.json
@@ -1,9 +1,9 @@
 {
   "nav.home": "ホーム",
   "nav.about": "会社概要",
-  "nav.x7_ai": "X7-AIロボット",
+  "nav.x7_ai": "Panshaker X7",
   "nav.contact": "お問い合わせ",
-  "nav.synapse": "Synapse OS",
+  "nav.synapse": "PanOS",
   "nav.careers": "採用情報",
   "nav.investors": "投資家情報",
 
@@ -15,9 +15,9 @@
   "philosophy.title": "食を超えて、ハードテックへ",
   "philosophy.desc": "外食産業のコントロール不能な手動調理プロセスを、AI時代に適した高信頼の産業オートメーションプロセスに変換します。<br>北米で中華料理の新たな可能性を創造します。",
 
-  "solution.price_title": "X7-AI調理ロボット",
+  "solution.price_title": "Panshaker X7",
   "solution.price_desc": "競合の半額<br>2週間以内の低コスト改装で<br>無人調理を実現",
-  "solution.synapse_title": "Synapse OS",
+  "solution.synapse_title": "PanOS",
   "solution.synapse_desc": "次世代レストラン運営システム<br>中華料理の海外展開をワンストップで標準化",
   "solution.learn_more": "詳しく見る →",
 
@@ -35,7 +35,7 @@
   "footer.careers": "採用情報",
   "footer.investors": "投資家情報",
   "footer.tech": "技術サポート",
-  "footer.synapse": "Synapse OS",
+  "footer.synapse": "PanOS",
   "footer.hardware": "ハードウェアソリューション",
   "footer.support": "アフターサービス",
   "footer.contact": "お問い合わせ",
@@ -50,9 +50,9 @@
   "home.hero.cta": "詳しく見る",
   "home.philosophy.title": "食を超えて、ハードテックへ",
   "home.philosophy.desc": "外食産業の制御しづらい手動調理プロセスを、AI時代に適した高信頼の産業自動化プロセスに変換します。<br>北米で中華料理の新たな可能性を創造します。",
-  "home.solution.price_title": "X7-AI調理ロボット",
+  "home.solution.price_title": "Panshaker X7",
   "home.solution.price_desc": "競合の半額<br>2週間以内の低コスト改装で<br>無人調理を実現",
-  "home.solution.synapse_title": "Synapse OS",
+  "home.solution.synapse_title": "PanOS",
   "home.solution.synapse_desc": "次世代レストラン運営システム<br>中華料理の海外展開をワンストップで標準化",
   "home.solution.learn_more": "詳しく見る →",
   "home.ambassador.line": "高雷雷 | グローバルアンバサダー | 元北京国安FC選手・レストランオーナー",
@@ -64,8 +64,9 @@
   "about.intro.title": "会社紹介",
   "about.intro.p1": "Panshaker Services は北米の外食オートメーションをリードする企業です。国境を越えて本格的な東洋の味を届けることを使命に、産業用自動化ハードウェアと自社開発のAIを組み合わせ、信頼性と効率を両立したキッチンを実現します。",
   "about.intro.p2": "中華料理の無人調理を北米で実現したパイオニアとして、制御しづらい調理工程を標準化し、高人件費・低効率・品質のばらつき・運営の複雑さといった課題を解決します。",
-  "about.intro.p3": "自社ブランドの運営に加え、「店中店」モデルと機器サブスクリプションで既存店舗を支援。自社製の炒めロボット、AIビジョン監視、Synapse OS が競争力の源泉です。",
+  "about.intro.p3": "自社ブランドの運営に加え、「店中店」モデルと機器サブスクリプションで既存店舗を支援。自社製の炒めロボット、AIビジョン監視、PanOS が競争力の源泉です。",
   "about.intro.p4": "今後も外食オートメーションを深化させ、炒めロボットから中華料理のフルスタック基盤へ拡張し、起業のハードルを下げます。フィジカルとデジタルを結ぶ先端技術で、事業者に価値を、顧客により良い体験を届けます。",
+  "about.brand.desc": "Panshaker Services は芯厨师（xinchushi）の海外ブランドです",
   "about.team.title": "経営チーム",
   "about.team.xu.name": "シュー・ハオラン",
   "about.team.xu.role": "創設者",
