--- a/js/lang/ko.json
+++ b/js/lang/ko.json
@@ -1,9 +1,9 @@
 {
   "nav.home": "홈",
   "nav.about": "회사 소개",
-  "nav.x7_ai": "X7-AI 로봇",
+  "nav.x7_ai": "Panshaker X7",
   "nav.contact": "문의하기",
-  "nav.synapse": "Synapse OS",
+  "nav.synapse": "PanOS",
   "nav.careers": "채용",
   "nav.investors": "투자자 관계",
 
@@ -15,9 +15,9 @@
   "philosophy.title": "음식을 넘어, 하드 테크",
   "philosophy.desc": "외식 산업의 통제 불가능한 수동 조리 과정을 AI 시대에 맞는 고신뢰 산업 자동화 프로세스로 전환합니다.<br>북미에서 중화 요리의 새로운 가능성을 만듭니다.",
 
-  "solution.price_title": "X7-AI 조리 로봇",
+  "solution.price_title": "Panshaker X7",
   "solution.price_desc": "경쟁사 가격의 1/2<br>2주 이내 저비용 개조<br>무인 조리 실현",
-  "solution.synapse_title": "Synapse OS",
+  "solution.synapse_title": "PanOS",
   "solution.synapse_desc": "차세대 레스토랑 운영 시스템<br>중식 해외 진출을 위한 원스톱 표준화 솔루션",
   "solution.learn_more": "자세히 보기 →",
 
@@ -35,7 +35,7 @@
   "footer.careers": "채용",
   "footer.investors": "투자자 관계",
   "footer.tech": "기술 지원",
-  "footer.synapse": "Synapse OS",
+  "footer.synapse": "PanOS",
   "footer.hardware": "하드웨어 솔루션",
   "footer.support": "사후 서비스",
   "footer.contact": "연락처",
@@ -50,9 +50,9 @@
   "home.hero.cta": "자세히 보기",
   "home.philosophy.title": "음식을 넘어, 하드 테크",
   "home.philosophy.desc": "외식 산업의 통제 불가능한 수동 조리 과정을 AI 시대에 맞는 고신뢰 산업 자동화 프로세스로 전환합니다.<br>북미에서 중화 요리의 새로운 가능성을 만듭니다.",
-  "home.solution.price_title": "X7-AI 조리 로봇",
+  "home.solution.price_title": "Panshaker X7",
   "home.solution.price_desc": "경쟁사 가격의 1/2<br>2주 이내 저비용 개조<br>무인 조리 실현",
-  "home.solution.synapse_title": "Synapse OS",
+  "home.solution.synapse_title": "PanOS",
   "home.solution.synapse_desc": "차세대 레스토랑 운영 시스템<br>중식 해외 진출을 위한 원스톱 표준화 솔루션",
   "home.solution.learn_more": "자세히 보기 →",
   "home.ambassador.line": "가오레이레이 | 글로벌 대사 | 전 베이징 궈안 FC 선수, 레스토랑 사장",
@@ -64,8 +64,9 @@
   "about.intro.title": "회사 소개",
   "about.intro.p1": "Panshaker Services는 북미 외식 자동화 분야의 선도 기업입니다. ‘우리 본연의 동양 미식을 국경을 넘어 전달한다’는 사명을 바탕으로, 산업용 자동화 하드웨어와 자체 AI를 결합해 신뢰도와 효율을 갖춘 주방을 만듭니다.",
   "about.intro.p2": "북미 중식 분야에서 무인 조리를 구현한 개척자로서, 제어가 어려운 조리 단계를 표준화하여 고인건비·저효율·품질 편차·운영 복잡도 문제를 해결합니다.",
-  "about.intro.p3": "자체 브랜드 운영뿐 아니라 ‘매장 내 매장’ 모델과 장비 구독을 통해 기존 식당을 지원합니다. 자가 개발한 볶음 로봇, AI 비전 모니터링, Synapse OS가 경쟁력의 핵심입니다.",
+  "about.intro.p3": "자체 브랜드 운영뿐 아니라 ‘매장 내 매장’ 모델과 장비 구독을 통해 기존 식당을 지원합니다. 자가 개발한 볶음 로봇, AI 비전 모니터링, PanOS가 경쟁력의 핵심입니다.",
   "about.intro.p4": "앞으로도 외식 자동화를 심화해 볶음 로봇에서 중식 전 영역 인프라로 확장하고, 창업 장벽을 낮춥니다. 물리와 디지털을 잇는 기술로 사업자에게 가치를, 고객에게 더 나은 경험을 제공합니다.",
+  "about.brand.desc": "Panshaker Services는 xinchushi(芯厨师)의 해외 브랜드입니다",
   "about.team.title": "경영진",
   "about.team.xu.name": "쉬하오란",
   "about.team.xu.role": "창립자",
