--- a/js/lang/zh-TW.json
+++ b/js/lang/zh-TW.json
@@ -1,9 +1,9 @@
 {
   "nav.home": "首頁",
   "nav.about": "關於我們",
-  "nav.x7_ai": "X7-AI機器人",
+  "nav.x7_ai": "Panshaker X7",
   "nav.contact": "聯繫我們",
-  "nav.synapse": "Synapse OS",
+  "nav.synapse": "PanOS",
   "nav.careers": "加入團隊",
   "nav.investors": "投資者關係",
 
@@ -15,9 +15,9 @@
   "philosophy.title": "不止於餐飲，更是硬科技",
   "philosophy.desc": "我們將餐飲業不可控的人工烹飪環節，轉換為 AI 時代高度可靠的工業自動化環節。<br>在北美，書寫中華美食的各種可能。",
 
-  "solution.price_title": "X7-AI炒菜機器人",
+  "solution.price_title": "Panshaker X7",
   "solution.price_desc": "競品價格 1/2<br>< 2週 低成本改裝<br>實現無人化烹飪",
-  "solution.synapse_title": "Synapse OS",
+  "solution.synapse_title": "PanOS",
   "solution.synapse_desc": "下一代餐飲操作系統<br>打造中餐出海標準化一條龍服務",
   "solution.learn_more": "了解更多 →",
 
@@ -35,7 +35,7 @@
   "footer.careers": "加入團隊",
   "footer.investors": "投資者關係",
   "footer.tech": "技術支援",
-  "footer.synapse": "Synapse OS",
+  "footer.synapse": "PanOS",
   "footer.hardware": "硬體改造方案",
   "footer.support": "售後服務",
   "footer.contact": "聯繫方式",
@@ -50,9 +50,9 @@
   "home.hero.cta": "了解更多",
   "home.philosophy.title": "不止於餐飲，更是硬科技",
   "home.philosophy.desc": "我們將餐飲業不可控的人工烹飪環節，轉換為 AI 時代高度可靠的工業自動化環節。<br>在北美，書寫中華美食的各種可能。",
-  "home.solution.price_title": "X7-AI炒菜機器人",
+  "home.solution.price_title": "Panshaker X7",
   "home.solution.price_desc": "競品價格 1/2<br>< 2週 低成本改裝<br>實現無人化烹飪",
-  "home.solution.synapse_title": "Synapse OS",
+  "home.solution.synapse_title": "PanOS",
   "home.solution.synapse_desc": "下一代餐飲操作系統<br>打造中餐出海標準化一條龍服務",
   "home.solution.learn_more": "了解更多 →",
   "home.ambassador.line": "高雷雷 | 全球大使 | 前北京國安隊隊員，餐廳老闆",
@@ -64,8 +64,9 @@
   "about.intro.title": "公司介紹",
   "about.intro.p1": "伴勺科技（Panshaker Services）是北美餐飲自動化領域的創新領跑者。我們的使命是「讓地道的東方味道跨越國界，讓每一座城市都能便捷地享受美食」。透過深度整合工業級自動化硬體與自研 AI 系統，讓餐飲生產更可靠、更高效。",
   "about.intro.p2": "我們是成功將「無人化烹飪」在北美中餐賽道落地的先驅，將不可控的烹飪環節轉化為標準化流程，解決「高人工、低效率、品質不穩定、商業複雜」的痛點。",
-  "about.intro.p3": "我們不僅自主管理品牌，也透過「店中店」合作模式與機器訂閱體系，為現有餐廳提供技術賦能。核心競爭力來自自研炒菜機器人、AI 視覺監控與 Synapse OS。",
+  "about.intro.p3": "我們不僅自主管理品牌，也透過「店中店」合作模式與機器訂閱體系，為現有餐廳提供技術賦能。核心競爭力來自自研炒菜機器人、AI 視覺監控與 PanOS。",
   "about.intro.p4": "未來，我們將持續深耕餐飲自動化，從炒菜機器人拓展至全品類中餐標準化基礎設施，降低餐飲創業門檻。用前沿科技連接物理世界與數位世界，為餐飲從業者創造價值，為每位食客帶來更有溫度的體驗。",
+  "about.brand.desc": "Panshaker Services 是芯廚師的海外品牌",
   "about.team.title": "管理團隊",
   "about.team.xu.name": "徐浩然",
   "about.team.xu.role": "創始人",
