--- a/js/lang/zh-CN.json
+++ b/js/lang/zh-CN.json
@@ -1,9 +1,9 @@
 {
   "nav.home": "首页",
   "nav.about": "关于我们",
-  "nav.x7_ai": "X7-AI机器人",
+  "nav.x7_ai": "Panshaker X7",
   "nav.contact": "联系我们",
-  "nav.synapse": "Synapse OS",
+  "nav.synapse": "PanOS",
   "nav.careers": "加入团队",
   "nav.investors": "投资者关系",
 
@@ -15,9 +15,9 @@
   "philosophy.title": "不止于餐饮，更是硬科技",
   "philosophy.desc": "我们将餐饮业不可控的人工烹饪环节，转换为 AI 时代高度可靠的工业自动化环节。<br>在北美，书写中华美食的各种可能。",
 
-  "solution.price_title": "X7-AI炒菜机器人",
+  "solution.price_title": "Panshaker X7",
   "solution.price_desc": "竞品价格 1/2<br>< 2周 低成本改装<br>实现无人化烹饪",
-  "solution.synapse_title": "Synapse OS",
+  "solution.synapse_title": "PanOS",
   "solution.synapse_desc": "下一代餐饮操作系统<br>打造中餐出海标准化一条龙服务",
   "solution.learn_more": "了解更多 →",
 
@@ -35,7 +35,7 @@
   "footer.careers": "加入团队",
   "footer.investors": "投资者关系",
   "footer.tech": "技术支持",
-  "footer.synapse": "Synapse OS",
+  "footer.synapse": "PanOS",
   "footer.hardware": "硬件改造方案",
   "footer.support": "售后服务",
   "footer.contact": "联系方式",
@@ -50,9 +50,9 @@
   "home.hero.cta": "了解更多",
   "home.philosophy.title": "不止于餐饮，更是硬科技",
   "home.philosophy.desc": "我们将餐饮业不可控的人工烹饪环节，转换为 AI 时代高度可靠的工业自动化环节。<br>在北美，书写中华美食的各种可能。",
-  "home.solution.price_title": "X7-AI炒菜机器人",
+  "home.solution.price_title": "Panshaker X7",
   "home.solution.price_desc": "竞品价格 1/2<br>< 2周 低成本改装<br>实现无人化烹饪",
-  "home.solution.synapse_title": "Synapse OS",
+  "home.solution.synapse_title": "PanOS",
   "home.solution.synapse_desc": "下一代餐饮操作系统<br>打造中餐出海标准化一条龙服务",
   "home.solution.learn_more": "了解更多 →",
   "home.ambassador.line": "高雷雷 | 全球大使 | 前北京国安队队员，餐厅老板",
@@ -64,8 +64,9 @@
   "about.intro.title": "公司介绍",
   "about.intro.p1": "伴勺科技（Panshaker Services）是北美餐饮自动化领域的创新领跑者。我们的使命是「让地道的东方味道跨越国界，让每一座城市都能便捷地享受美食」。通过深度集成工业级自动化硬件与自主研发的 AI 系统，我们让餐饮生产更可靠、更高效。",
   "about.intro.p2": "我们是成功将“无人化烹饪”在北美中餐赛道落地的先驱，将不可控的烹饪环节转化为标准化流程，解决“高人工、低效率、品质不稳定、商业复杂”的痛点。",
-  "about.intro.p3": "我们不仅自主经营品牌，也通过“店中店”合作模式与机器订阅体系，为现有餐厅提供技术赋能。核心竞争力来自自研炒菜机器人、AI 视觉监控与 Synapse OS。",
+  "about.intro.p3": "我们不仅自主经营品牌，也通过“店中店”合作模式与机器订阅体系，为现有餐厅提供技术赋能。核心竞争力来自自研炒菜机器人、AI 视觉监控与 PanOS。",
   "about.intro.p4": "未来，我们将持续深耕餐饮自动化，从炒菜机器人拓展至全品类中餐标准化基础设施，降低餐饮创业门槛。我们用前沿科技连接物理世界与数字世界，为餐饮从业者创造价值，为每一位食客带来更有温度的体验。",
+  "about.brand.desc": "Panshaker Services 是芯厨师的海外品牌",
   "about.team.title": "管理团队",
   "about.team.xu.name": "徐浩然",
   "about.team.xu.role": "创始人",
