--- a/js/lang/zh-CN.json
+++ b/js/lang/zh-CN.json
@@ -6,6 +6,7 @@
   "nav.synapse": "PanOS",
   "nav.careers": "加入团队",
   "nav.investors": "投资者关系",
+  "nav.service": "服务",
 
   "hero.headline": "AI 赋能下低人工成本",
   "hero.headline_strong": "商业中餐解决方案",
