--- a/js/lang/ko.json
+++ b/js/lang/ko.json
@@ -6,29 +6,24 @@
   "nav.synapse": "PanOS",
   "nav.careers": "채용",
   "nav.investors": "투자자 관계",
-
+  "nav.service": "서비스",
   "hero.headline": "AI 기반 저인건비",
   "hero.headline_strong": "상업용 중식 솔루션",
   "hero.subtitle": "하드웨어 자동화와 AI 지능형 시스템을 통합하여 외식 산업의 효율성을 재정의",
   "hero.cta": "자세히 보기",
-
   "philosophy.title": "음식을 넘어, 하드 테크",
   "philosophy.desc": "외식 산업의 통제 불가능한 수동 조리 과정을 AI 시대에 맞는 고신뢰 산업 자동화 프로세스로 전환합니다.<br>북미에서 중화 요리의 새로운 가능성을 만듭니다.",
-
   "solution.price_title": "Panshaker X7",
   "solution.price_desc": "경쟁사 가격의 1/2<br>2주 이내 저비용 개조<br>무인 조리 실현",
   "solution.synapse_title": "PanOS",
   "solution.synapse_desc": "차세대 레스토랑 운영 시스템<br>중식 해외 진출을 위한 원스톱 표준화 솔루션",
   "solution.learn_more": "자세히 보기 →",
-
   "ambassador.name": "가오레이레이",
   "ambassador.title": "글로벌 대사",
   "ambassador.desc": "전 베이징 궈안 FC 선수, 레스토랑 사장",
-
   "esg.title": "사일런트 키친 프로그램",
   "esg.desc": "청각 장애인 커뮤니티 역량 강화, 포용적 고용 환경 구축<br>기술로 소통 장벽을 없애고, 모두가 빛나게",
   "esg.cta": "자세히 보기",
-
   "footer.company": "Panshaker Services",
   "footer.company_title": "Panshaker Services",
   "footer.about": "회사 소개",
@@ -44,7 +39,6 @@
   "footer.location": "Location: San Diego, CA",
   "footer.copyright": "2026 Panshaker Inc. All Rights Reserved.",
   "footer.tagline": "북미 시장을 위한 외식 자동화 인프라 제공업체",
-
   "home.hero.title": "AI 기반 저인건비<br><strong>상업용 중식 솔루션</strong>",
   "home.hero.subtitle": "하드웨어 자동화와 AI 지능형 시스템을 통합하여 외식 산업의 효율성을 재정의",
   "home.hero.cta": "자세히 보기",
@@ -59,7 +53,6 @@
   "home.esg.title": "사일런트 키친 프로그램",
   "home.esg.desc": "청각 장애인 커뮤니티 역량 강화, 포용적 고용 환경 구축<br>기술로 소통 장벽을 없애고, 모두가 빛나게",
   "home.esg.cta": "자세히 보기",
-
   "about.banner.title": "회사 정보",
   "about.intro.title": "회사 소개",
   "about.intro.p1": "Panshaker Services는 북미 외식 자동화 분야의 선도 기업입니다. ‘우리 본연의 동양 미식을 국경을 넘어 전달한다’는 사명을 바탕으로, 산업용 자동화 하드웨어와 자체 AI를 결합해 신뢰도와 효율을 갖춘 주방을 만듭니다.",
@@ -71,7 +64,6 @@
   "about.team.xu.name": "쉬하오란",
   "about.team.xu.role": "창립자",
   "about.team.view_profile": "프로필 보기 →",
-
   "profile.back_link": "← 경영진 목록으로",
   "profile.xu.name": "쉬하오란",
   "profile.xu.role": "창립자",
@@ -83,7 +75,6 @@
   "profile.unknown.name": "unknown",
   "profile.unknown.role": "CTO",
   "profile.unknown.p1": "펜실베이니아대 컴퓨터과학 박사, 톈진대 컴퓨터과학 학사.",
-
   "careers.title": "채용",
   "careers.heading": "채용",
   "careers.role.title": "리드 필드 서비스 테크니션",
@@ -112,7 +103,6 @@
   "careers.benefit_12": "장애 보험",
   "careers.benefit_13": "유급 공휴일",
   "careers.apply_cta": "지원하기",
-
   "investors.loading": "아직 준비 중입니다. 응원해 주셔서 감사합니다.",
   "investors.subtitle": "행복과 만사형통을 기원합니다."
 }
