--- a/js/lang/en.json
+++ b/js/lang/en.json
@@ -1,74 +1,74 @@
 {
   "nav.home": "Home",
-  "nav.about": "About Us",
+  "nav.about": "About",
   "nav.x7_ai": "Panshaker X7",
   "nav.contact": "Contact",
   "nav.synapse": "PanOS",
   "nav.careers": "Careers",
-  "nav.investors": "Investor Relations",
+  "nav.investors": "Investors",
   "nav.service": "Services",
-  "hero.headline": "AI-Powered Low-Labor-Cost",
-  "hero.headline_strong": "Commercial Chinese Cuisine Solutions",
-  "hero.subtitle": "Integrating hardware automation with AI intelligent systems to redefine restaurant efficiency",
-  "hero.cta": "Learn More",
-  "philosophy.title": "Beyond Food — It's Hard Tech",
-  "philosophy.desc": "We transform the uncontrollable manual cooking process into a highly reliable industrial automation process for the AI era.<br>Writing new possibilities for Chinese cuisine in North America.",
+  "hero.headline": "AI-Powered. Low-Cost.",
+  "hero.headline_strong": "Commercial Kitchen Automation",
+  "hero.subtitle": "Hardware automation meets AI intelligence — redefining how restaurants operate",
+  "hero.cta": "See How It Works",
+  "philosophy.title": "This Ain't Just Food — It's Hard Tech",
+  "philosophy.desc": "We turn the unpredictable art of manual cooking into a rock-solid, AI-driven industrial process.<br>Bringing Chinese cuisine to every corner of North America.",
   "solution.price_title": "Panshaker X7",
-  "solution.price_desc": "Half the price of competitors<br>< 2 weeks low-cost retrofit<br>enabling unmanned cooking",
+  "solution.price_desc": "Half the cost of competitors<br>Up and running in under 2 weeks<br>Fully unmanned cooking",
   "solution.synapse_title": "PanOS",
-  "solution.synapse_desc": "Next-gen restaurant operating system<br>One-stop standardized solution for Chinese cuisine overseas",
+  "solution.synapse_desc": "Next-gen restaurant OS<br>Your all-in-one platform for standardized Chinese cuisine operations",
   "solution.learn_more": "Learn More →",
   "ambassador.name": "Gao Leilei",
   "ambassador.title": "Global Ambassador",
   "ambassador.desc": "Former Beijing Guoan FC player, restaurant owner",
-  "esg.title": "Silent Kitchen Initiative",
-  "esg.desc": "Empowering the hearing-impaired community, creating inclusive employment<br>Using technology to break communication barriers, let everyone shine",
+  "esg.title": "The Silent Kitchen",
+  "esg.desc": "Empowering the hearing-impaired community with inclusive employment<br>Using technology to break down communication barriers — so everyone can shine",
   "esg.cta": "Learn More",
   "footer.company": "Panshaker Services",
   "footer.company_title": "Panshaker Services",
-  "footer.about": "About Us",
+  "footer.about": "About",
   "footer.careers": "Careers",
-  "footer.investors": "Investor Relations",
-  "footer.tech": "Technical Support",
+  "footer.investors": "Investors",
+  "footer.tech": "Tech & Support",
   "footer.synapse": "PanOS",
-  "footer.hardware": "Hardware Solutions",
-  "footer.support": "After-Sales Service",
+  "footer.hardware": "Hardware Retrofit",
+  "footer.support": "Customer Support",
   "footer.contact": "Contact",
   "footer.contact_title": "Contact",
   "footer.email": "Email: contact@panshaker.com",
-  "footer.location": "Location: San Diego, CA",
+  "footer.location": "San Diego, CA",
   "footer.copyright": "2026 Panshaker Inc. All Rights Reserved.",
-  "footer.tagline": "Restaurant Automation Infrastructure Provider for the North American Market",
-  "home.hero.title": "AI-Powered Low-Labor-Cost<br><strong>Commercial Chinese Cuisine Solutions</strong>",
-  "home.hero.subtitle": "Integrating hardware automation with AI intelligent systems to redefine restaurant efficiency",
-  "home.hero.cta": "Learn More",
-  "home.philosophy.title": "Beyond Food — It's Hard Tech",
-  "home.philosophy.desc": "We transform the uncontrollable manual cooking process into a highly reliable industrial automation process for the AI era.<br>Writing new possibilities for Chinese cuisine in North America.",
+  "footer.tagline": "Building the backbone of automated dining in North America.",
+  "home.hero.title": "AI-Powered. Low-Cost.<br><strong>Commercial Kitchen Automation</strong>",
+  "home.hero.subtitle": "Hardware automation meets AI intelligence — redefining how restaurants operate",
+  "home.hero.cta": "See How It Works",
+  "home.philosophy.title": "This Ain't Just Food — It's Hard Tech",
+  "home.philosophy.desc": "We turn the unpredictable art of manual cooking into a rock-solid, AI-driven industrial process.<br>Bringing Chinese cuisine to every corner of North America.",
   "home.solution.price_title": "Panshaker X7",
-  "home.solution.price_desc": "Half the price of competitors<br>< 2 weeks low-cost retrofit<br>enabling unmanned cooking",
+  "home.solution.price_desc": "Half the cost of competitors<br>Up and running in under 2 weeks<br>Fully unmanned cooking",
   "home.solution.synapse_title": "PanOS",
-  "home.solution.synapse_desc": "Next-gen restaurant operating system<br>One-stop standardized solution for Chinese cuisine overseas",
+  "home.solution.synapse_desc": "Next-gen restaurant OS<br>Your all-in-one platform for standardized Chinese cuisine operations",
   "home.solution.learn_more": "Learn More →",
   "home.ambassador.line": "Gao Leilei | Global Ambassador | Former Beijing Guoan FC player, restaurant owner",
-  "home.esg.title": "Silent Kitchen Initiative",
-  "home.esg.desc": "Empowering the hearing-impaired community, creating inclusive employment<br>Using technology to break communication barriers, let everyone shine",
+  "home.esg.title": "The Silent Kitchen",
+  "home.esg.desc": "Empowering the hearing-impaired community with inclusive employment<br>Using technology to break down communication barriers — so everyone can shine",
   "home.esg.cta": "Learn More",
   "about.banner.title": "Information",
   "about.intro.title": "About Panshaker",
-  "about.intro.p1": "Panshaker Services is a leader in North American restaurant automation. Our mission is to bring authentic Eastern flavors across borders so every city can enjoy great food. By integrating industrial-grade automation hardware with our own AI, we deliver reliable, efficient kitchens.",
-  "about.intro.p2": "We pioneered unmanned cooking for Chinese cuisine in North America, turning uncontrollable cooking steps into standardized processes to solve high labor costs, low efficiency, inconsistent quality, and operational complexity.",
-  "about.intro.p3": "We run our own brands and, through an in-store partnership and equipment subscription model, empower existing restaurants. Our edge comes from self-built wok robots, AI vision monitoring, and PanOS.",
-  "about.intro.p4": "We will keep advancing restaurant automation, expanding from wok robots to full-stack Chinese cuisine infrastructure to lower the barrier for entrepreneurs. We use leading tech to connect the physical and digital worlds, creating value for operators and better experiences for diners.",
+  "about.intro.p1": "Panshaker Services is leading the charge in North American restaurant automation. Our mission: bring authentic Eastern flavors across borders so every city can enjoy great food. By pairing industrial-grade automation hardware with our own AI, we deliver kitchens that are reliable, efficient, and built to scale.",
+  "about.intro.p2": "We pioneered unmanned cooking for Chinese cuisine in North America — turning unpredictable kitchen workflows into standardized, repeatable processes. That means lower labor costs, higher efficiency, consistent quality, and simpler operations.",
+  "about.intro.p3": "Beyond running our own brands, we empower existing restaurants through a store-within-a-store model and equipment subscriptions. Our edge? Self-built wok robots, AI-powered vision monitoring, and PanOS.",
+  "about.intro.p4": "We're just getting started. From wok robots to full-stack Chinese cuisine infrastructure — we're lowering the barrier for restaurant entrepreneurs everywhere. Cutting-edge tech that bridges the physical and digital worlds, creating value for operators and better experiences for diners.",
   "about.brand.desc": "Panshaker Services is the overseas brand of xinchushi",
   "about.team.title": "Leadership",
   "about.team.xu.name": "Haoran Xu",
   "about.team.xu.role": "Founder",
   "about.team.view_profile": "View Profile →",
-  "profile.back_link": "← Back to Leadership Team",
+  "profile.back_link": "← Back to Leadership",
   "profile.xu.name": "Haoran Xu",
   "profile.xu.role": "Founder",
   "profile.xu.p1": "Haoran Xu holds a Ph.D. and M.S. in Engineering from the University of Washington, a B.S. in Mathematics from The Ohio State University, and a B.A. in Film from Northwestern University (Qatar).",
-  "profile.xu.p2": "Before founding Panshaker, Haoran founded ADiB Consulting in 2023. He interned as a software engineer at Samsung China, ROHM Semiconductor China, and Hyundai AutoEver (2022-2025), interned at Hengdu Law Firm as a patent agent in 2025, and has been a CS research assistant at Ohio University since Oct 2025.",
+  "profile.xu.p2": "Before founding Panshaker, Haoran founded ADiB Consulting in 2023. He interned as a software engineer at Samsung China, ROHM Semiconductor China, and Hyundai AutoEver (2022–2025), interned at Hengdu Law Firm as a patent agent in 2025, and has been a CS research assistant at Ohio University since Oct 2025.",
   "profile.sun.name": "Qisheng Sun",
   "profile.sun.role": "Co-Founder",
   "profile.sun.p1": "Qisheng Sun holds an M.S. from UC San Diego, dual B.S. degrees in Computer Science and Mathematics from Case Western Reserve University, and a Mathematics degree from Xi'an Jiaotong University.",
@@ -76,19 +76,19 @@
   "profile.unknown.role": "CTO",
   "profile.unknown.p1": "unknown holds a Ph.D. in Computer Science from the University of Pennsylvania and a B.S. in Computer Science from Tianjin University.",
   "careers.title": "Careers",
-  "careers.heading": "Careers",
+  "careers.heading": "Join the Team",
   "careers.role.title": "Lead Field Service Technician",
   "careers.role.location": "Location: Seattle, WA",
-  "careers.role.salary": "Salary: $79,000 - $98,800 a year",
+  "careers.role.salary": "Salary: $79,000 – $98,800/year",
   "careers.role.type": "Type: Full-time",
-  "careers.role.overview_title": "Role Overview",
-  "careers.role.overview_desc": "Lead on-site installation, commissioning, and maintenance for Panshaker automated cooking systems, ensuring reliability and customer success.",
+  "careers.role.overview_title": "What You'll Do",
+  "careers.role.overview_desc": "Lead on-site installation, commissioning, and maintenance for Panshaker automated cooking systems — making sure everything runs smoothly and our customers succeed.",
   "careers.role.resp_title": "Key Responsibilities",
-  "careers.role.resp_1": "Perform on-site installation, commissioning, and maintenance of Panshaker automated cooking equipment.",
+  "careers.role.resp_1": "Install, commission, and maintain Panshaker automated cooking equipment on-site.",
   "careers.role.resp_2": "Diagnose technical issues and perform repairs to minimize downtime.",
-  "careers.role.resp_3": "Provide training and technical support to kitchen staff.",
+  "careers.role.resp_3": "Train and support kitchen staff on our systems.",
   "careers.role.resp_4": "Maintain detailed service logs and report on hardware performance.",
-  "careers.benefits_title": "Benefits",
+  "careers.benefits_title": "Benefits & Perks",
   "careers.benefit_1": "Tuition reimbursement",
   "careers.benefit_2": "Parental leave",
   "careers.benefit_3": "Health insurance",
@@ -103,6 +103,17 @@
   "careers.benefit_12": "Disability insurance",
   "careers.benefit_13": "Paid holidays",
   "careers.apply_cta": "Apply Now",
-  "investors.loading": "We're still working hard. Thank you for your support.",
-  "investors.subtitle": "Wishing you happiness and all the best."
+  "investors.loading": "We're still cooking. Thanks for your patience and support.",
+  "investors.subtitle": "Wishing you all the best.",
+  "contact.name": "Your Name",
+  "contact.name_ph": "Full name",
+  "contact.email": "Email Address",
+  "contact.email_ph": "you@example.com",
+  "contact.phone": "Phone Number",
+  "contact.phone_ph": "(optional)",
+  "contact.region": "Region",
+  "contact.region_select": "Select your region",
+  "contact.description": "How Can We Help?",
+  "contact.desc_ph": "Tell us about your restaurant, your goals, and how we can help...",
+  "contact.submit": "Send Message"
 }
